# openenv-course

./: .dockerignore  .gitignore  Dockerfile  README.md  __init__.py  app.py  client.py  environment.py  inference.py  models.py  openenv.yaml  pyproject.toml  requirements.txt  tests.py
module-1/: notebook.ipynb
module-2/: notebook.ipynb
module-3/: notebook.ipynb
module-5/: notebook.ipynb
outputs/: baseline_results.md
server/: app.py
